--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,14 +31,16 @@ dependencies:
   flutter:
     sdk: flutter
 
+  get_it: ^7.6.0
   http: 1.0.0
-
+  intl: ^0.18.1
+  flutter_bloc: ^8.1.3
+  equatable: ^2.0.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  get_it: ^7.6.0
-  intl: any
+
 
 dev_dependencies:
   flutter_test:
