--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   intl: ^0.18.1
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
+  shared_preferences: ^2.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
